fix: enhance CommandRunner with refined input/output streaming and consistent argument handling